target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/path: /metrics
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/services
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_COMMON.git
      jkube.io/git-commit: 904f66ad75e1e7e6738b17f25706c45f13252b6f
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      prometheus.io/port: "9779"
      jkube.io/issue-system: GitHub
      prometheus.io/scrape: "true"
      jkube.io/git-url: https://github.com/likhia/INTERNAL_COMMON.git
      jkube.io/scm-tag: 2.3.2.Beta1
    labels:
      expose: "true"
      app: services
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.common
    name: services
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: services
      provider: jkube
      group: com.workshop.common
- apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      app: services
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.common
    name: common-config-map
  data:
    application.properties: |-
      resteasy.jaxrs.defaultPath:/api

      spring.datasource.url=jdbc:mysql://a65a541ea48824946a99ef3d4d47770b-1928168107.ap-southeast-1.elb.amazonaws.com:3306/cars
      spring.datasource.username=admin
      spring.datasource.password=redhat
      spring.jpa.hibernate.ddl-auto=update

      ## Hibernate Properties
      # The SQL dialect makes Hibernate generate better SQL for the chosen database
      spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
      spring.datasource.testOnBorrow=true
      spring.datasource.validationQuery=SELECT 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/services
      jkube.io/issue-system: GitHub
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      jkube.io/git-url: https://github.com/likhia/INTERNAL_COMMON.git
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_COMMON.git
      jkube.io/scm-tag: 2.3.2.Beta1
      jkube.io/git-commit: 904f66ad75e1e7e6738b17f25706c45f13252b6f
    labels:
      app: services
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.common
    name: services
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: services
        provider: jkube
        group: com.workshop.common
    template:
      metadata:
        labels:
          app: services
          provider: jkube
          version: 1.0.0-SNAPSHOT
          group: com.workshop.common
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: services:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /deployments/config
            name: config
            readOnly: true
        volumes:
        - configMap:
            items:
            - key: application.properties
              path: application.properties
            name: common-config-map
          name: config
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/services
      jkube.io/issue-system: GitHub
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      jkube.io/git-url: https://github.com/likhia/INTERNAL_COMMON.git
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_COMMON.git
      jkube.io/scm-tag: 2.3.2.Beta1
      jkube.io/git-commit: 904f66ad75e1e7e6738b17f25706c45f13252b6f
      app.kubernetes.io/vcs-uri: git@github.com:snowdrop/rest-http-example.git
    labels:
      app.kubernetes.io/part-of: http-api-example
      app.openshift.io/runtime-version: 2.3.2.RELEASE
      app.kubernetes.io/name: http-api
      app.openshift.io/runtime: rh-spring-boot
      app.kubernetes.io/component: frontend
      app: services
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.common
    name: services
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: services
